# Mini3Dengine

./: CMakeLists.txt
Actor/: Actor.cpp  Actor.h
Component/: Component.cpp  Component.h
Game/: Game.cpp  Game.h
